@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.599 2006/02/17 17:47:40 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.600 2006/02/20 16:48:14 agaffney Exp $
 
-*GLI-0.3 (12 Feb 2006)
+
+  20 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
+  src/GLIPortage.py:
+  add code make GLIPortage.py capable of being run stand-along for dynamic
+  stage3 generation and copying packages in a GRP-ish way
 
   17 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIPortage.py:
@@ -12,6 +16,8 @@
   14 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIUtility.py:
   add get_chosts() function
+
+*GLI-0.3 (12 Feb 2006)
 
   12 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
   src/templates/x86ArchitectureTemplate.py:
